[package]
name = "bevy_transform_gizmo"
version = "0.1.1"
authors = ["Aevyrie Roessler <aevyrie@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_mod_picking = { version = "0.4.0" }
bevy_mod_raycast = { version = "0.2.2" }

[dev-dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "render",
    "bevy_wgpu",
    "bevy_winit",
    "bevy_gltf",
    "x11",
    "jpeg",
] }
